--- a/templates/base.html
+++ b/templates/base.html
@@ -36,13 +36,18 @@
         {% for todo in todo_list %}
         <div class="ui segment">
             <div class="ui grid">
-                <div class="column">
 
+                <div class="ten wide column">
                     <a class="ui {{ 'green' if todo.complete else 'red' }} ribbon label">{{ 'Completo' if todo.complete else 'Incompleto' }}</a>
                     <p class="ui big header"><i class="{{ 'check' if todo.complete }} square outline icon"></i>{{ todo.title }} </p>
                     <a class="ui teal basic button" href="/update/{{ todo.id }}">Atualizar</a>
                     <a class="ui red basic button" href="/delete/{{ todo.id }}">Remover</a>
+                </div>
 
+                <div class="four wide right floated column">
+                    {% if todo.date %}
+                    <h3 class="ui right floated {{ 'green' if todo.complete else 'red' if (todo.date < today) else 'yellow' }} header">{{ todo.date }}</h3>
+                    {% endif %}
                 </div>
             </div>
 
@@ -52,6 +57,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.js"></script>
-    <script src="{{url_for('static', filename='main.js')}}"></script>
+    <script src="{{url_for('static', filename='js/moment.min.js')}}"></script>
+    <script src="{{url_for('static', filename='js/main.js')}}"></script>
 </body>
 </html>
